# TanukiGB

./: .gitignore  CMakeLists.txt  README.rst
PROJECT_NAME/Module_Name/: CMakeLists.txt
TanukiGB/: CMakeLists.txt  tanukigb.cpp
TanukiGB/concepts/: CMakeLists.txt
TanukiGB/cpu/: CMakeLists.txt  cpu.cpp  cpu_instruction_set.h  cpu_register_16bit.cpp  cpu_register_8bit.cpp  cpu_register_map.cpp  opcode_handler.h  opcode_handler_impl.h  register_set.cpp
TanukiGB/cpu/TODO_if_needed__opcode/: CMakeLists.txt
TanukiGB/cpu/opcode/: CMakeLists.txt
TanukiGB/cpu/register/: CMakeLists.txt  register_set.cpp
TanukiGB/graphics/: CMakeLists.txt
TanukiGB/memory/: CMakeLists.txt  bootrom.cpp  gameboy_colour_rom.h  gameboy_rom.h  mmu.cpp
TanukiGB/types/: CMakeLists.txt
TanukiGB/utility/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile
docs/sphinx/: conf.py
include/: _TanukiGB_config.h
include/tanukigb/cpu/: cpu.h  cpu_register.h  cpu_register_16bit.h  cpu_register_8bit.h  cpu_register_map.h  executor.h  flag_register.h  jump_table.h  opcode_handler.h  opcode_handler_fwd_decls.h  opcode_tags.h  register.h  register_functionoid.h  register_set.h  register_set_functionoid.h  register_tags.h
include/tanukigb/cpu/internal/: 16bit_arithmetic.h  16bit_load.h  8bit_arithmetic.h  8bit_load.h  jump.h  opcode_handler_fwd_decls.h  register_arithmetic_operators.h  register_bitwise_operators.h  register_comparison_operators.h  register_flag_operations.h  rotate_and_shift.h  single_bit.h
include/tanukigb/cpu/internal/opcode/: 16bit_arithmetic.h  16bit_load.h  8bit_arithmetic.h  8bit_load.h  jump.h  opcode_handler_fwd_decls.h  rotate_and_shift.h  single_bit.h
include/tanukigb/cpu/internal/register/: register_arithmetic_operators.h  register_bitwise_operators.h  register_comparison_operators.h  register_flag_operations.h
include/tanukigb/cpu/opcode/: opcode_handler.h  opcode_handler_fwd_decls.h  opcode_tags.h  opcode_type_traits.h
include/tanukigb/cpu/opcode/internal/: 16bit_arithmetic.h  16bit_load.h  8bit_arithmetic.h  8bit_load.h  jump.h  rotate_and_shift.h  single_bit.h
include/tanukigb/cpu/register/: register.h  register_ops.h  register_set.h  register_set_functionoid.h  register_type.h  register_type_traits.h
include/tanukigb/cpu/register/internal/: register_arithmetic_operators.h  register_bitwise_operators.h  register_comparison_operators.h  register_flag_operations.h
include/tanukigb/graphics/: ppu.h
include/tanukigb/internal/memory/: memory.h
include/tanukigb/memory/: addressable.h  bootrom.h  concepts.h  memory.h  mmu.h
include/tanukigb/types/: types.h
include/tanukigb/utility/: concepts.h  crtp.h  endianness.h  enum_flag_utils.h  enum_utils.h  integral.h  pimpl.h  property.h  type_traits.h
tests/: CMakeLists.txt
tests/cpu/: cpu_register_tests.cpp
