# set(concepts_MODULE_ROOT "${MODULE_ROOT}/TanukiGB/concepts")

# add_library(concepts INTERFACE)

# target_sources(concepts PUBLIC
#   FILE_SET HEADERS
#   TYPE HEADERS
#   BASE_DIRS ${MODULE_ROOT}
#   FILES #"${MODULE_ROOT}/_TanukiGB_config.h"
#     # "${concepts_MODULE_ROOT}/addressable.h"
#   )

# target_link_libraries(concepts INTERFACE types)
